# feature-engineering

./: .env.demo  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ingestion-review-triage.md  pyproject.toml  run-demo.sh
.github/workflows/: ci.yml
deploy/kind/: Dockerfile.backend  Dockerfile.frontend  deploy.sh  nginx.conf
deploy/kind/k8s/: 00-namespace.yaml  10-postgres.yaml  20-backend.yaml  30-frontend.yaml
docs/architecture/: 2026-06-27-feature-engineering-platform-design.md  2026-06-27-feature-engineering-platform-roadmap.md  2026-06-27-sp0-foundations-design.md  2026-06-29-reference-architecture.md  2026-06-29-sp1-metadata-overlay-design.md  2026-07-01-sp2-intake-clarification-design.md  2026-07-02-assisted-definition-design.md  2026-07-02-platform-review-sp0-sp15.md  2026-07-03-sp1.5-overlay-hardening-design.md  2026-07-23-feature-generation-end-to-end.md  feature-generation-workflow.html
docs/examples/: deposits.csv
docs/plans/: 2026-06-27-sp0-00-overview.md  2026-06-27-sp0-01-event-store.md  2026-06-27-sp0-02-documents-dag.md  2026-06-27-sp0-03-state-machine.md  2026-06-27-sp0-04-runtime-core.md  2026-06-27-sp0-05-runtime-time-effects.md  2026-06-27-sp0-06-aggregates-lifecycle.md  2026-06-27-sp0-07-identity-authz-gates.md  2026-06-27-sp0-08-governance-privacy-audit.md  2026-06-29-sp1-00-overview.md  2026-06-29-sp1-01-sp0-extensions.md  2026-06-29-sp1-02-fact-store.md  2026-06-29-sp1-03-catalog-adapter.md  2026-06-29-sp1-04-commands-confirmation.md  2026-06-29-sp1-05-resolve.md  2026-06-29-sp1-06-profiler.md  2026-06-29-sp1-07-freshness.md  2026-07-01-sp2-00-overview.md  2026-07-01-sp2-01-sp0-extensions.md  2026-07-01-sp2-02-contract-model.md  2026-07-01-sp2-03-llm-envelope.md  2026-07-01-sp2-04-intake.md  2026-07-01-sp2-05-clarification.md  2026-07-01-sp2-06-candidates.md  2026-07-01-sp2-07-gate1.md  2026-07-01-sp2-08-lifecycle.md  2026-07-01-sp2-09-bootstrap-e2e.md
docs/superpowers/plans/: 2026-06-27-sp0-00-overview.md  2026-06-27-sp0-01-event-store.md  2026-06-27-sp0-02-documents-dag.md  2026-06-27-sp0-03-state-machine.md  2026-06-27-sp0-04-runtime-core.md  2026-06-27-sp0-05-runtime-time-effects.md  2026-06-27-sp0-06-aggregates-lifecycle.md  2026-06-27-sp0-07-identity-authz-gates.md  2026-06-27-sp0-08-governance-privacy-audit.md  2026-07-03-sp0.5-backbone-hardening.md  2026-07-04-deepdive-findings.md  2026-07-04-sp0.5-round2.md  2026-07-04-sp1.5-overlay-hardening.md  2026-07-04-sp1.6-overlay-backlog.md  2026-07-05-api-layer.md  2026-07-05-frontend.md  2026-07-05-graph-search-slice.md  2026-07-05-hypothesis-feature-contract-plan.md  2026-07-05-llm-enrichment-slice.md  2026-07-05-sp2-retirement-plan.md  2026-07-05-upload-catalog-vertical-slice.md  2026-07-08-governed-banking-feature-factory-plan.md  2026-07-08-m0-walking-skeleton.md  2026-07-09-phase0-taxonomy-foundation.md  2026-07-09-phase1a-shadow-recognizer.md  2026-07-10-governed-feature-policy.md  2026-07-10-phase1b-scoped-grounding.md  2026-07-10-phase2-ranking-dimensions.md  2026-07-10-phase2-ranking-policy.md  2026-07-10-phase3a-entity-graph-foundation.md  2026-07-11-batched-enrichment.md  2026-07-11-phase0-authority-kernel.md  2026-07-11-phase1-glossary-front-door.md  2026-07-11-phase3b1-resolved-need-metadata.md  2026-07-11-phase3b2a-catalog-realizations.md  2026-07-11-phase3b2b-governed-bridges.md  2026-07-12-phase2-table-facts.md  2026-07-12-phase3a-passc-deterministic-joins.md  2026-07-13-join-confirmation-surface.md  2026-07-14-passb-confirm-surface.md  (+24 more)
docs/superpowers/specs/: 2026-06-27-feature-engineering-platform-design.md  2026-06-27-feature-engineering-platform-roadmap.md  2026-06-27-sp0-foundations-design.md  2026-06-29-banking-domain-catalog.md  2026-07-04-upload-catalog-pivot-design.md  2026-07-04-upload-catalog-review-resolutions.md  2026-07-04-upload-mapping-enrichment-design.md  2026-07-05-feature-contract-review-findings.md  2026-07-05-feature-engineering-loop-design.md  2026-07-05-frontend-api-handoff.md  2026-07-05-hypothesis-feature-contract-design.md  2026-07-05-upload-catalog-review-findings.md  2026-07-07-banking-domain-intelligence-design.md  2026-07-07-banking-taxonomy-reference.md  2026-07-07-governed-feature-contract-flow-design.md  2026-07-08-banking-feature-template-library.md  2026-07-09-openmetadata-connector.md  (+34 more)
frontend/: DESIGN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.e2e.json  tsconfig.test.json  vite.config.ts
frontend/e2e/: asset-experience.spec.ts
frontend/src/: App.test.tsx  App.tsx  SessionBar.tsx  api.test.ts  api.ts  index.css  main.tsx  nav.test.ts  nav.ts  session.test.ts  session.ts  test-setup.ts
specs/: AI_Feature_Engineering_Platform_PRD_v1.0.md  AI_Feature_Engineering_Platform_PRD_v1.0_Scope_Extension.md  AI_Feature_Engineering_Platform_PRD_v2.0.md  Automated_EDA_Profiling.md  agentic_metadata_eda_spec.md  eda_template.html
src/featuregen/: __init__.py  __main__.py  config.py  idgen.py  ids.py
src/sp0/: idgen.py
tests/: conftest.py
tests/contracts/: test_contract_symbols.py  test_core_interface_reexports.py
tests/db/: test_migrations.py
tests/eval/: conftest.py  contamination.py  feature_eval.py  gold_columns.py  gold_features.py  test_anthropic_live_canary.py  test_batch_size_sweep.py  test_contamination.py  test_enrich_batch_quality.py  test_feature_eval.py  test_feature_gen_eval.py  test_passb_table_synth_live_canary.py
tests/events/: test_append_event.py  test_append_pii_guard.py  test_concurrent_seq_gapless.py  test_global_seq_monotonic.py  test_load_stream.py  test_optimistic_concurrency.py  test_registry_backward_compat.py  test_registry_hydrate.py  test_registry_lifecycle.py  test_registry_snapshot.py  test_registry_upcast.py  test_registry_validate.py  test_serde.py
tests/featuregen/: _helpers.py  conftest.py  test_main_pointer_repair.py
tests/projections/: test_checkpoint_nowait.py  test_fail_closed.py  test_migration.py  test_rebuild.py  test_run_projection.py
tests/sp0/: _helpers.py  conftest.py
(+1153 files in other folders)
