[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sp0"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "jsonschema>=4.21",
    "python-ulid>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-postgresql>=6.0",
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# importlib mode lets test modules with the same basename coexist across packages
# (e.g. tests/projections/test_migration.py and tests/sp0/documents/test_migration.py)
# without requiring __init__.py shims; it is pytest's recommended mode.
addopts = "--import-mode=importlib"
# Hard per-test timeout so a hung/deadlocked test (e.g. concurrent DB-lock waits in
# the optimistic-concurrency / race tasks) FAILS fast instead of hanging the runner.
# "signal" (SIGALRM, main thread) interrupts blocked psycopg C calls, keeping any single
# test well under the build runner's stall watchdog.
timeout = 60
timeout_method = "signal"
